# hpc-concurrent-hashmap

./: CMakeLists.txt  Makefile  README.md  run_tests.sh
include/concurrent_hashmap/: base_map.hpp  thread_partitioned.hpp
src/: AbstractHashMap.cpp  AbstractHashMap.h  ChainHashMap.cpp  ChainHashMap.h  ChainHashMapRehash.cpp  ChainHashMapRehash.h  ChainHashMapRehashOpenMp.cpp  ChainHashMapRehashOpenMp.h  ChainHashMapRehashThreads.cpp  ChainHashMapRehashThreads.h  ThreadPartitionHashMap.cpp  ThreadPartitionHashMap.h  ThreadSafeChainHashMap.cpp  ThreadSafeChainHashMap.h
testdata/: generate_data.cpp  results.md  results.txt
tests/: BenchMarkTest.cpp  ChainHashMapRehashOpenMpTest.cpp  ChainHashMapRehashTest.cpp  ChainHashMapRehashThreadsTest.cpp  ChainHashMapTest.cpp  ComparisonTest.cpp  CompilationTest.cpp  PartitionHashMapSimpleTest.cpp  PartitionHashMapTimingTest.cpp  ReadHeavyTest.cpp  ResizeStressTest.cpp  ThreadSafeChainHashMapTest.cpp  ThreadSafeChainHashMapTestRehash.cpp  ThreadSafeUnorderedSetTest.cpp  UnorderedSetTest.cpp
tests/benchmark/: benchmark_framework.hpp  comparison_test.cpp
